--- a/style.css
+++ b/style.css
@@ -96,8 +96,12 @@ body {
   
   /* Стили для игрового экрана */
   #game-screen {
-    padding: 20px;
+    padding: 8px;
     animation: fadeInGame 0.8s ease;
+  }
+  #game-screen h1 {
+    color: #ffcc00;
+    text-shadow: 0 0 15px rgba(255, 204, 0, 0.6);
   }
   
   @keyframes fadeInGame {
@@ -127,9 +131,10 @@ body {
   }
   
   #timer {
+    padding: 0px ;
     font-size: 20px;
     margin-bottom: 10px;
-    color: #ffffff;
+    color : #4fd2de;
   }
   
   @keyframes pop {
@@ -143,8 +148,8 @@ body {
   }
   
   #restart-btn {
-    padding: 10px 20px;
-    font-size: 16px;
+    padding: 5px 20px;
+    font-size: 15px;
     background: linear-gradient(to right, #00b09b, #96c93d);
     color: white;
     border: none;
@@ -170,16 +175,15 @@ body {
     z-index: 100;
   }
   
-  .right {
-    top: 50%;
-    right: 30px;
-    transform: translateY(-50%);
-  }
-  
-  .left {
-    top: 50%;
-    left: 30px;
-    transform: translateY(-50%);
+  .motivate {
+    position: absolute;
+    font-size: 28px;
+    font-weight: bold;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    z-index: 100;
+    pointer-events: none;
+    white-space: nowrap;
   }
   
   @keyframes shake {
@@ -285,3 +289,34 @@ body {
       padding: 10px 20px;
     }
   }
+  @keyframes punchIn {
+    0% {
+      transform: scale(0.8) translateY(20px);
+      opacity: 0;
+    }
+    50% {
+      transform: scale(1.2) translateY(-5px);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(1) translateY(0);
+      opacity: 1;
+    }
+  }
+  
+  .motivate.show {
+    animation: punchIn 0.6s ease;
+    opacity: 1 !important;
+  }
+  #misses {
+    font-size: 18px;
+    margin-top: 10px;
+    color: #e74444;
+  }
+  #misses.show {
+    animation: punchIn 0.6s ease;
+    opacity: 1 !important;
+  }
+  
+  
+  
