--- a/style.css
+++ b/style.css
@@ -346,5 +346,9 @@ body {
   .heart-animation {
     animation: heartLost 0.5s forwards;
   }
-  
+  @media screen and (max-width: 768px) {
+    #message-right, #message-left {
+      display: none !important;
+    }
+  }
   
