--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ body {
   text-shadow: 0 0 20px rgba(255, 204, 0, 0.8);
   font-weight: 800;
   letter-spacing: 2px;
+  
 }
 
 .intro-square {
@@ -229,7 +230,7 @@ body {
   padding: 0px ;
   font-size: 20px;
   margin-bottom: 10px;
-  color : #4fd2de;
+  color : #ffffff;
 }
 
 @keyframes pop {
@@ -310,7 +311,7 @@ body {
 }
 
 #score {
-  font-size: 18px;
+  font-size: 25px;
   margin-top: 10px;
   color: #00ff00;
 }
